# VideoCut

./: .env.example  .gitignore  CHANGELOG.md  OUTPUT_STANDARD.md  README.md  README.zh-CN.md  The Ultimate Beginner’s Guide to OpenClaw [st534T7-mdE].en-ehkg1hFWq8A.vtt  The Ultimate Beginner’s Guide to OpenClaw [st534T7-mdE].en.vtt  USAGE.zh-CN.md  export_platforms.py  process_irr80Q6i5fI.py  publish_only.py  pyproject.toml  render_only.py  translate_only.py  translation_protected_terms.txt  videocut.example.toml  videocut.toml
.claude/: .gitignore  CLAUDE.md  README.md  settings.json
.claude/claude/: project-info.md  tech-stack.md
.claude/rules/: cli.md  python.md
scripts/: cosyvoice_batch.py  fix_runs.py  prepare_test_fixture.py  process_69XGdiMR17I_manual.py  process_subtitle_only.py  render_fd4k16REDOU_voice_clone.py  render_from_manifest.py  rewrite_dub_manifest.py  runninghub.py  say_tts_adapter.py  validate_translation_sample.py
tests/: test_e2e_smoke.py
videocut/: asr.py  clean_runs.py  cli.py  config.py  cover.py  doctor.py  downloader.py  dub_timing.py  inpaint.py  media.py  models.py  pipeline.py  publish.py  shell.py  subtitle_only.py  subtitles.py  timing.py  translate.py  tts.py
